Adding trailing slash to meta.toml

--- a/meta.toml
+++ b/meta.toml
@@ -15,6 +15,6 @@ target_path = "$XDG_CONFIG_HOME/wezterm/"
 [nushell]
 source = "nushell"
 [nushell.windows]
-target_path = "%APPDATA%/nushell"
+target_path = "%APPDATA%/nushell/"
 [nushell.unix]
 target_path = "$XDG_CONFIG_HOME/nushell/"
